sfdx-source/SmartVisca/main/default/objects/InternationalCallingCodes__mdt/InternationalCallingCodes__mdt.object-meta.xml
<CustomObject>
    <label>国際電話番号データ</label>
</CustomObject>