sfdx-source/SmartVisca/main/default/objects/InternationalCallingCodes__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>国番号</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>