sfdx-source/SmartVisca/main/default/objects/InternationalCallingCodes__mdt/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>国名</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>