sfdx-source/SmartVisca/main/default/objects/InternationalCallingCodes__mdt/fields/IsoCountryCode__c.field-meta.xml
<CustomField>
    <fullName>IsoCountryCode__c</fullName>
    <label>ISO国コード</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>